--- a/styles/style.css
+++ b/styles/style.css
@@ -1,24 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-  background-color: #658932;
-  color: white;
-}
-
-.inline {
-  display: inline-block;
-  list-style-type: none;
-  margin: 0 auto;
-  padding: 10px;
-  font-size: 20px;
-}
-
-nav {
-  text-align: center;
-  margin-top: 20px;
-  background-color: white;
-}/*# sourceMappingURL=style.css.map */
++change
