--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,20 @@ body {
   color: white;
 }
 
+h1 {
+  text-align: center;
+  font-size: 3em;
+  color: white;
+  margin: 20px;
+}
+
+p {
+  text-align: center;
+  font-size: 1.5em;
+  color: white;
+  margin: 20px;
+}
+
 .inline {
   display: inline-block;
   list-style-type: none;
