--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,6 +11,19 @@ body {
     color: white;
 }
 
+h1 {
+    text-align: center;
+    font-size: 3em;
+    color: white;
+    margin: 20px;
+}
+
+p {
+    text-align: center;
+    font-size: 1.5em;
+    color: white;
+    margin: 20px;
+}
 
 .inline {
     display: inline-block;
