--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,51 +1,126 @@
 $primaryGreen: #658932;
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    background-color: $primaryGreen;
-    color: white;
+  font-family: "Roboto", sans-serif;
+  background-color: $primaryGreen;
+  color: white;
 }
 
 h1 {
-    text-align: center;
-    font-size: 3em;
-    color: white;
-    margin: 20px;
+  text-align: center;
+  font-size: 3em;
+  color: white;
+  margin: 20px;
 }
 
 h2 {
-    text-align: center;
-    font-size: 2em;
-    color: white;
-    margin: 40px;
+  text-align: center;
+  font-size: 2em;
+  margin: 40px;
 }
 
 p {
-    text-align: center;
-    font-size: 1.5em;
-    color: white;
-    margin: 0 auto;
-    padding: 30px;
-    width: 80%;
-    
+  text-align: center;
+  font-size: 1.5em;
+  margin: 0 auto;
+  padding: 30px;
+  width: 80%;
 }
 
 .inline {
-    display: inline-block;
-    list-style-type: none;
-    margin: 0 auto;
-    padding: 10px;
-    font-size: 20px;
+  display: inline-block;
+  list-style-type: none;
+  margin: 0 auto;
+  padding: 10px;
+  font-size: 20px;
 }
 
 nav {
-    text-align: center;
-    margin-top: 20px;
-    background-color: white;
+  text-align: center;
+  background-color: white;
+}
 
+img {
+  width: 40%;
+  height: auto;
+  margin: 0 auto;
+}
+
+main {
+  text-align: center;
+  margin: 0 auto;
+  padding: 20px;
+  width: 80%;
+  background-color: white;
+  color: black;
+  border-radius: 10px;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.box {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45%;
+    height: 45%;
+    margin: 10px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    font-size: 24px;
+    color: #333333;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.box.answer {
+    background-color: #cccccc;
+    font-size: 16px;
+    color: #ffffff;
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+}
+
+.box:hover {
+    transform: rotateY(180deg);
+}
+
+.box:hover .content {
+    display: none;
+}
+
+.box:hover .answer {
+    display: block;
+}
+
+.content,
+.answer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    backface-visibility: hidden;
+    text-align: center;
+    padding: 20px;
+    line-height: 1.5;
+}
+
+.answer {
+    display: none;
+    transform: rotateY(180deg);
 }
