--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ img {
   margin: 0 auto;
 }
 
-main {
+.question {
   text-align: center;
   margin: 0 auto;
   padding: 20px;
@@ -95,6 +95,14 @@ main {
 
 .box:hover {
   transform: rotateY(180deg);
+}
+
+.box:hover .content {
+  display: none;
+}
+
+.box:hover .answer {
+  display: block;
 }
 
 .content,
