--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,6 @@
 body {
   font-family: "Roboto", sans-serif;
   background-color: #658932;
-  color: white;
 }
 
 h1 {
@@ -26,7 +25,6 @@ h2 {
 p {
   text-align: center;
   font-size: 1.5em;
-  color: white;
   margin: 0 auto;
   padding: 30px;
   width: 80%;
@@ -44,4 +42,20 @@ nav {
   text-align: center;
   margin-top: 20px;
   background-color: white;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.box {
+  width: 80%;
+  height: 100%;
+  background-color: white;
+  margin: 10px;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
 }/*# sourceMappingURL=style.css.map */
