Win condition works, but lacks fail condition

--- a/styles/style.css
+++ b/styles/style.css
@@ -158,7 +158,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
   text-align: center;
@@ -166,14 +166,6 @@ img {
   font-size: 24px;
 }
 
-.win-screen h1 {
-  font-size: 48px;
-  margin-bottom: 20px;
-}
-
-.win-screen img {
-  width: 200px;
-  border-radius: 50%;
-  box-shadow: 0 0 20px #fff;
-  margin-bottom: 20px;
+.win-screen.show {
+  display: block;
 }/*# sourceMappingURL=style.css.map */
