--- a/styles/style.scss
+++ b/styles/style.scss
@@ -155,28 +155,19 @@ img {
 }
 
 .win-screen {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    color: #fff;
-    text-align: center;
-    padding: 50px;
-    font-size: 24px;
-    
-  }
-  
-  .win-screen h1 {
-    font-size: 48px;
-    margin-bottom: 20px;
-  }
-  
-  .win-screen img {
-    width: 200px;
-    border-radius: 50%;
-    box-shadow: 0 0 20px #fff;
-    margin-bottom: 20px;
-  }
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  text-align: center;
+  padding: 50px;
+  font-size: 24px;
+}
+
+.win-screen.show {
+  display: block;
+}
