--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
 body {
   font-family: "Roboto", sans-serif;
   background-color: #658932;
+  color: white;
 }
 
 h1 {
@@ -42,6 +43,11 @@ nav {
   background-color: white;
 }
 
+img {
+  width: 40%;
+  height: auto;
+  margin: 0 auto;
+}
 
 main {
   display: flex;
@@ -49,19 +55,15 @@ main {
   align-items: center;
 }
 
-.box {
+.section {
   width: 80%;
   height: 100%;
   background-color: white;
+  color: black;
   margin: 10px;
   padding: 20px;
   text-align: center;
   border-radius: 10px;
-
-img {
-  width: 40%;
-  height: auto;
-  margin: 0 auto;
 }
 
 .question {
