--- a/styles/style.scss
+++ b/styles/style.scss
@@ -51,6 +51,23 @@ img {
   margin: 0 auto;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section {
+  width: 80%;
+  height: 100%;
+  background-color: white;
+  color: black;
+  margin: 10px;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+}
+
 .question {
   text-align: center;
   margin: 0 auto;
