--- a/styles/style.scss
+++ b/styles/style.scss
@@ -179,7 +179,7 @@ main {
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.8);
-  color: #fff;
+  color: white;
   text-align: center;
   padding: 50px;
   font-size: 24px;
