Tried using seperate files with sass and mixin

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,5 @@
+@import "./box";
+
 $primaryGreen: #658932;
 
 * {
@@ -26,7 +28,7 @@ h2 {
 
 p {
   text-align: center;
-  font-size: 1.2em;
+  font-size: 24px;
   margin: 0 auto;
   padding: 30px;
   width: 80%;
@@ -87,23 +89,7 @@ main {
   height: 100vh;
 }
 
-.box {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 45%;
-  height: 45%;
-  margin: 10px;
-  background-color: #ffffff;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-  font-size: 24px;
-  color: #333333;
-  transition: transform 1s;
-  transform-style: preserve-3d;
-}
-
+ 
 .box--answer {
   background-color: #cccccc;
   font-size: 16px;
@@ -186,5 +172,5 @@ main {
 }
 
 .win-screen--show {
-  display: block;
-}
+    display: block;
+  }
