--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,20 @@
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 45%;
+  height: 45%;
+  margin: 10px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  font-size: 24px;
+  color: black;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -24,7 +41,7 @@ h2 {
 
 p {
   text-align: center;
-  font-size: 1.2em;
+  font-size: 24px;
   margin: 0 auto;
   padding: 30px;
   width: 80%;
@@ -83,23 +100,6 @@ main {
   align-items: center;
   width: 100%;
   height: 100vh;
-}
-
-.box {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 45%;
-  height: 45%;
-  margin: 10px;
-  background-color: #ffffff;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-  font-size: 24px;
-  color: #333333;
-  transition: transform 1s;
-  transform-style: preserve-3d;
 }
 
 .box--answer {
