--- a/styles/style.scss
+++ b/styles/style.scss
@@ -27,9 +27,8 @@ h2 {
 }
 
 p {
-  text-align: center;
+  @include center;
   font-size: 24px;
-  margin: 0 auto;
   padding: 30px;
   width: 80%;
 }
@@ -71,8 +70,7 @@ main {
 }
 
 .question {
-  text-align: center;
-  margin: 0 auto;
+  @include center;
   padding: 20px;
   width: 80%;
   background-color: white;
@@ -103,5 +101,22 @@ main {
 }
 
 .win-screen--show {
-    display: block;
-  }
+  display: block;
+}
+
+.lose-screen {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  text-align: center;
+  font-size: 24px;
+}
+
+.lose-screen--show {
+  display: block;
+}
