--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,5 @@
 @import "./box";
+@import "./mixins";
 
 $primaryGreen: #658932;
 
@@ -67,6 +68,15 @@ main {
   padding: 20px;
   text-align: center;
   border-radius: 10px;
+}
+
+.intro  {
+  @include flexCenter;
+  flex-direction: column;
+  background-color: white;
+  color: black;
+  margin: 25px;
+  border-radius: 10px;  
 }
 
 .question {
