--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,8 @@
 @import "./box";
 @import "./mixins";
 
-$primaryGreen: #658932;
+$primaryGreen: #45af4d;
+
 
 * {
   margin: 0;
@@ -34,17 +35,17 @@ p {
   width: 80%;
 }
 
-.site-nav__item {
-  display: inline-block;
-  list-style-type: none;
-  margin: 0 auto;
-  padding: 10px;
-  font-size: 20px;
-}
-
 nav {
   text-align: center;
   background-color: white;
+  
+  .site-nav__item {
+    display: inline-block;
+    list-style-type: none;
+    margin: 0 auto;
+    padding: 10px;
+    font-size: 20px;
+  }
 }
 
 img {
@@ -57,17 +58,17 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
 
-.site-main__section {
-  width: 80%;
-  height: 100%;
-  background-color: white;
-  color: black;
-  margin: 10px;
-  padding: 20px;
-  text-align: center;
-  border-radius: 10px;
+  .site-main__section {
+    width: 80%;
+    height: 100%;
+    background-color: white;
+    color: black;
+    margin: 10px;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+  }
 }
 
 .intro  {
